# Synthetic-Games-Data-Generation

./: .env.example  .gitignore  PIPELINE.md  README.md  pyproject.toml  requirements.txt
config/: defaults.yaml  prompts.yaml
src/generator/: __init__.py  cli.py  config.py  diversity.py  exporters.py  generator.py  jobs.py  model_client.py  models.py  puzzles.py  scenario.py  storage.py  validation.py
tests/: test_config.py  test_generator.py  test_jobs.py  test_model_client.py  test_pipeline_components.py
