[project]
name = "synthetic-sudoku-dataset"
version = "0.1.0"
description = "Synthetic Sudoku conversation data generation system"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "requests>=2.31.0",
  "pydantic>=2.0.0",
]

[project.scripts]
sudoku-generator = "src.generator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
